<resources>
    <string name="app_name">MealVity</string>
    <string name="package_name">cenec.darash.mealvity</string>

    <string name="preferences_default_search_street">default_search_street</string>

    <string name="text_sign_in_google">SIGN IN WITH GOOGLE</string>
    <string name="text_sign_in_email">SIGN IN WITH EMAIL</string>

    <string name="text_no_account">Don\'t have an account?</string>
    <string name="text_account">Already have an account?</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_info">Please enter your e-mail associated with Mealvity:</string>

    <string name="text_sign_up"><u>Sign up</u></string>
    <string name="text_sign_up_button">SIGN UP</string>
    <string name="text_sign_in"><u>Sign in</u></string>
    <string name="text_sign_in_button">SIGN IN</string>
    <string name="text_reset_password"><u>Reset</u></string>
    <string name="text_reset_password_button">RESET PASSWORD</string>

    <string name="text_hint_full_name">Full Name</string>
    <string name="text_hint_email">E-Mail</string>
    <string name="text_hint_password">Password</string>
    <string name="text_hint_password_repeat">Repeat Password</string>
    <string name="text_hint_old_password">Current Password</string>
    <string name="text_hint_new_password">New Password</string>
    <string name="text_hint_repeat_new_password">Repeat New Password</string>

    <string name="logo_transition_name">transition_logo</string>

    <string name="text_field_empty">Field is empty</string>
    <string name="text_password_not_equal">Passwords do not match</string>
    <string name="text_email_invalid">E-Mail is invalid</string>
    <string name="text_weak_password">Password must have more than 6 characters</string>
    <string name="text_user_already_exists">Account already created using this e-mail</string>
    <string name="text_invalid_user">E-mail or password is invalid</string>
    <string name="text_no_exisiting_email">No account has been created with this e-mail</string>
    <string name="text_old_new_password_equal">Old password and new password are the same</string>
    <string name="text_invalid_password">Password is invalid</string>

    <string name="text_loading">Loading...</string>

    <string name="home_tab">Home</string>
    <string name="orders_tab">Orders</string>
    <string name="profile_tab">Profile</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_delivery_addresses">Delivery Addresses</string>
    <string name="text_notifications">Notifications</string>
    <string name="text_help_service">Help</string>
    <string name="text_button_save_changes">SAVE CHANGES</string>
    <string name="text_button_log_out">LOG OUT</string>

    <string name="cancel_changes_dialog_title">Cancel changes</string>
    <string name="cancel_changes_dialog_message">Are you sure you want to cancel your changes?</string>
    <string name="cancel_changes_dialog_positive_button">YES</string>
    <string name="cancel_changes_dialog_negative_button">NO</string>

    <string name="insert_password_dialog_title">Password</string>
    <string name="insert_password_dialog_message">Please write your password in order to confirm your changes</string>
    <string name="insert_password_dialog_positive_button">ACCEPT</string>
    <string name="insert_password_dialog_negative_button">@android:string/cancel</string>
    <string name="text_save_new_password_button">SAVE NEW PASSWORD</string>

    <string name="insert_street_number_dialog_title">Street Number</string>
    <string name="insert_street_number_dialog_message">Please write the number of your chosen street</string>
    <string name="insert_street_number_positive_button">SAVE</string>
    <string name="insert_street_number_negative_button">@android:string/cancel</string>


    <string name="text_empty_address_list">Looks like you don\'t have any addresses saved. You can save one by pressing the \'+\' button.</string>
    <string name="text_hint_street_name">Street name*</string>
    <string name="text_hint_street_number">Nº*</string>
    <string name="text_hint_door_info">Floor number and door</string>
    <string name="text_hint_address_extras">Extras (Doorbell, Apartment name, etc)</string>
    <string name="text_hint_town">Town*</string>
    <string name="text_hint_postal_code">Postal code*</string>
    <string name="text_hint_address_title">Address title*</string>
    <string name="text_button_save_address">SAVE ADDRESS</string>
    <string name="item_list_address_title">Title</string>
    <string name="item_list_street_name">Street name and number</string>
    <string name="item_list_door">Door</string>
    <string name="item_list_extras">Extras</string>
    <string name="item_list_town_and_pc">Town and PC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_welcome">What\'s on your mind today?</string>
    <string name="text_search_nearby_restaurants">Search nearby restaurants</string>
    <string name="text_hint_full_address">Enter your full address here</string>
    <string name="text_menu_sort_by">Sort by</string>
    <string name="text_menu_filters">Filters</string>
    <string name="text_sort_list_rating">Rating</string>
    <string name="text_sort_list_distance">Distance</string>
    <string name="text_sort_list_economic_price">Price: € to €€€€</string>
    <string name="text_sort_luxurious_price">Price: €€€€ to €</string>
    <string name="text_button_sort_list">Sort</string>
    <string name="text_sort_list_best_match">Best match</string>
    <string name="text_button_apply_filters">Apply Filters</string>
    <string name="text_checkbox_price1">€</string>
    <string name="text_checkbox_price2">€€</string>
    <string name="text_checkbox_price3">€€€</string>
    <string name="text_checkbox_price4">€€€€</string>
    <string name="text_filter_price">Price</string>
    <string name="text_filter_distance">Distance</string>
    <string name="text_open_restaurants">Open restaurants</string>
    <string name="checkbox_search_open_restaurants">Search for open restaurants</string>
    <string name="text_button_clear_filters">Clear Filters</string>

    <string name="api_call_onFailure">Failed retrieving info. Please try again later</string>
    <string name="api_call_response_unsuccessful">"Failed retrieving info. Please try again later. Error code: </string>
    <string name="title_more_info_info">Info</string>
    <string name="title_more_info_menu">Menu</string>
    <string name="title_more_info_map">Map</string>

    <string-array name="array_distances">
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>8 km</item>
        <item>10 km</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="text_cuisine_list">Cuisines</string>
    <string name="text_address">Address</string>
    <string name="text_display_phone">Phone</string>
    <string name="title_more_info_book_table">Book a table</string>
    <string name="title_more_info_order">Order</string>
    <string name="text_opening_hours">Opening hours:</string>
    <string name="text_timings_not_available">Opening hours: Not available</string>
    <string name="text_title_toolbar_map">Map</string>
    <string name="text_my_order">My Order</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_no_items_in_cart">0 items in cart</string>
    <string name="text_base_price">Base price</string>
    <string name="text_details">Details</string>
    <string name="text_pick_up">Pick-up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_delivery_pickup">Delivery / Pick-up</string>
    <string name="text_pickup_time">Pickup time</string>
    <string name="text_payment_method">Payment method</string>
    <string name="text_cash">Cash</string>
    <string name="text_card">Card</string>
    <string name="text_paypal">Paypal</string>
    <string name="text_reservations">Reservations</string>
    <string name="text_more_info">+ Info</string>
    <string name="text_string_delivery_details">Delivery Details</string>
    <string name="text_string_confirmation">Confirmation</string>
    <string name="text_empty_reservation_list">No reservations made. Search restaurants near you and book a table.</string>
    <string name="text_order_list_empty">No orders made. Search restaurants near you and make an order.</string>
    <string name="text_empty_restaurant_list">No restaurants found near you / using applied filters</string>
    <string name="text_show_all">Show ALL</string>
    <string name="text_show_pending">Show PENDING</string>
    <string name="text_show_accepted">Show ACCEPTED</string>
    <string name="text_show_rejected">Show REJECTED</string>
    <string name="text_order_not_available">Pick-Up / Delivery not available in this restaurant</string>
    <string name="string_vat_percentage">VAT (10%)</string>
    <string name="text_add_address">Add address</string>
    <string name="text_more_Info">+ More</string>
    <string name="text_confirm_order">Confirm order</string>
    <string name="clear_cart">Empty cart</string>

</resources>
