<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/backgroundColor"
    >

    <EditText
        android:id="@+id/editText_sign_in_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_edit_text"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_edit_text"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_sign_in_email" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/square_button_shape"
        android:text="@string/text_sign_in_button"
        android:textSize="18sp"
        android:fontFamily="@font/fonarto_regular"
        android:textColor="@color/backgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_sign_in_password" />

    <TextView
        android:id="@+id/text_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_no_account"
        android:fontFamily="@font/fonarto_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

    <TextView
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/text_sign_up"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/fonarto_bold"
        android:textSize="15sp"
        android:onClick="createNewAccount"
        app:layout_constraintStart_toEndOf="@+id/text_no_account"
        app:layout_constraintTop_toTopOf="@+id/text_no_account" />

</androidx.constraintlayout.widget.ConstraintLayout>