<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_menu_filters"
        android:textAlignment="center"
        android:textSize="30sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/fonarto_bold"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_filter_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorAccentDark"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/textView_filter_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonarto_regular"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/text_filter_price"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <include
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="5dp"
                layout="@layout/view_separator"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox_price1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/text_checkbox_price1"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/checkBox_price2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/checkBox_price2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/text_checkbox_price2"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/checkBox_price3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/checkBox_price1"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/checkBox_price3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/text_checkbox_price3"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/checkBox_price4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/checkBox_price2"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/checkBox_price4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/black"
                    android:padding="5dp"
                    android:text="@string/text_checkbox_price4"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/checkBox_price3"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_filter_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorAccentDark"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/textView_filter_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonarto_regular"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/text_filter_distance"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <include
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="5dp"
                layout="@layout/view_separator"
                />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/distance_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isb_thumb_color="@color/colorAccentDarkDark"
                app:isb_show_indicator="none"
                app:isb_track_progress_color="@color/colorAccentDarkDark"
                app:isb_show_tick_texts="true"
                app:isb_tick_texts_array="@array/array_distances"
                app:isb_tick_texts_color="@color/black"
                app:isb_track_background_color="@color/black"
                app:isb_show_thumb_text="true"
                app:isb_ticks_count="5"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_filter_restaurants_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/colorAccentDark"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/textView_filter_restaurants_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fonarto_regular"
                android:gravity="center"
                android:textAlignment="center"
                android:text="@string/text_open_restaurants"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="25sp"/>

            <include
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginBottom="5dp"
                layout="@layout/view_separator"
                />

            <CheckBox
                android:id="@+id/checkBox_restaurants_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:buttonTint="@color/black"
                android:padding="5dp"
                android:text="@string/checkbox_search_open_restaurants"
                android:textSize="20sp"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_apply_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="22sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/fonarto_regular"
        android:text="@string/text_button_apply_filters"
        />

    <Button
        android:id="@+id/button_clear_filters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="22sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/fonarto_regular"
        android:text="@string/text_button_clear_filters"
        />

</LinearLayout>