<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:fontFamily="@font/fonarto_bold"
            android:text="@string/text_payment_method"
            android:padding="2dp"
            />

        <include
            layout="@layout/view_separator_black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/text_view_cash_method"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:background="@drawable/custom_border_with_color_primary"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/fonarto_regular"
                android:text="@string/text_cash"
                />

            <TextView
                android:id="@+id/text_view_card_method"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:background="@drawable/custom_border_with_color_accent_dark"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fonarto_regular"
                android:text="@string/text_card"
                />

            <TextView
                android:id="@+id/text_view_paypal_method"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:background="@drawable/custom_border_with_color_accent_dark"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fonarto_regular"
                android:text="@string/text_paypal"
                />
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/layout_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>