<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_mealvity" />

    <Button
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/circle_button_shape"
        android:drawableStart="@drawable/icon_google"
        android:fontFamily="@font/fonarto_regular"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/text_sign_in_google"
        android:textColor="@color/backgroundColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/button_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/circle_button_shape"
        android:text="@string/text_sign_in_email"
        android:textColor="@color/backgroundColor"
        android:textSize="18sp"
        android:drawableStart="@drawable/ic_mail_outline_black_32dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:onClick="emailSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_google" />

    <TextView
        android:id="@+id/text_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/text_no_account"
        android:fontFamily="@font/fonarto_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_email" />

    <TextView
        android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/text_sign_up"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/fonarto_bold"
        android:textSize="15sp"
        android:onClick="createNewAccount"
        app:layout_constraintStart_toEndOf="@+id/text_no_account"
        app:layout_constraintTop_toTopOf="@+id/text_no_account" />


</androidx.constraintlayout.widget.ConstraintLayout>